# io-multiplexing

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/io-multiplexing/: define.h  logging.h
include/io-multiplexing/client/: client.h
include/io-multiplexing/server/: config.h  server.h
src/: internal_define.h
src/client/: client.c  client.cpp  client_impl.cpp  client_impl.h
src/server/: connection_manager.c  connection_manager.cpp  connection_manager.h  poll.h  server.c  server.cpp  server_impl.cpp  server_impl.h
src/server/linux/: poll_impl.cpp
src/server/osx/: poll_impl.c  poll_impl.cpp
src/shared/: logging.h  rb_tree.h  utils.h
test/: CMakeLists.txt
test/integrate_test/: client.c  client.cpp  server.c  server.cpp
test/unit_test/: ctest.h  rb_tree_ut.c
